example/secondfile/objects/AT_T_Customer_Site_Quote__c.object
<CustomObject>
    <description>Junction object setup between Site and Quote objects.</description>
    <fields>
        <fullName>API_IPQ_Site_Formula__c</fullName>
        <formula>AT_T_Customer_Site__r.API_IPQ_Site_Formula__c</formula>
        <label>API IPQ Site Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Circuit_ID__c</fullName>
        <label>ASE Circuit ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_MACD_Site_Status__c</fullName>
        <label>ASE MACD Site Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Completion_Date__c</fullName>
        <label>ASR Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Processed_Date__c</fullName>
        <label>ASR Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Received_Date__c</fullName>
        <label>ASR Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AT_T_Customer_Site_Name__c</fullName>
        <description>AT&amp;T Customer Site Name</description>
        <formula>AT_T_Customer_Site__r.Site_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AT &amp;T Customer Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_T_Customer_Site__c</fullName>
        <label>AT&amp;T Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Site Quotes</relationshipLabel>
        <relationshipName>AT_T_Customer_Site_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AT_T_Quote__c</fullName>
        <label>AT&amp;T Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Site Quotes</relationshipLabel>
        <relationshipName>AT_T_Customer_Site_Quotes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AVPNPage__c</fullName>
        <defaultValue>&apos;Page1&apos;</defaultValue>
        <description>used for  pagination of AVPN RDS</description>
        <label>AVPN RDS Current Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_Page1_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AVPN Page1 Completed</description>
        <label>AVPN RDS Page1 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN_Page2_Completd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page2 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN_Page3_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page3 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN_Page4_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page4 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Vendor_LEC__c</fullName>
        <formula>AT_T_Customer_Site__r.Access_Vendor_LEC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Vendor LEC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>AT_T_Quote__r.Apttus_Proposal__Account__r.Id</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Quote__r.Apttus_Proposal__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <formula>AT_T_Customer_Site__r.Address_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_CLLI__c</fullName>
        <formula>AT_T_Customer_Site__r.Alternate_Access_Building_CLLI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access Building CLLI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_Fiber_code__c</fullName>
        <formula>AT_T_Customer_Site__r.Alternate_Access_Building_Fiber_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access Building Fiber code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_Building_Fiber_color__c</fullName>
        <formula>AT_T_Customer_Site__r.Alternate_Access_Building_Fiber_color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access Building Fiber color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Access_Price_Old__c</fullName>
        <label>Alternate Access IGLOO Access Price-Old</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Access_Price__c</fullName>
        <label>Alternate Access IGLOO Access Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Access_Speed_Old__c</fullName>
        <label>Alternate Access IGLOO Access Speed-Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Access_Speed__c</fullName>
        <label>Alternate Access IGLOO Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Failure_Code_Old__c</fullName>
        <label>Alternate Access IGLOO Failure Code-Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Failure_Code__c</fullName>
        <label>Alternate Access IGLOO Failure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Interface_CodeOld__c</fullName>
        <label>Alternate Access IGLOO Interface CodeOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Interface_Code__c</fullName>
        <label>Alternate Access IGLOO Interface Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Interface_Type__c</fullName>
        <formula>IF(Alternate_Access_IGLOO_Interface_Code__c == &apos;1003&apos;, &apos;Electrical - 100 Base TX&apos;, IF( Alternate_Access_IGLOO_Interface_Code__c == &apos;1010&apos;,&apos;Optical Single Mode - 1000 Base LX&apos;, 
IF(Alternate_Access_IGLOO_Interface_Code__c == &apos;1009&apos;, &apos;Optical Multi Mode - 1000 Base SX&apos; , &apos;&apos;)))</formula>
        <label>Alternate Access IGLOO Interface Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_ProcessCmpltd_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Access IGLOO ProcessCmpltd-Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Process_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Access IGLOO Process Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Request_Time_Old__c</fullName>
        <label>Alternate Access IGLOO Request Time-Old</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Request_Time__c</fullName>
        <label>Alternate Access IGLOO Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_ResponseStatusOld__c</fullName>
        <label>Alternate Access IGLOO ResponseStatusOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Response_Old__c</fullName>
        <label>Alternate Access IGLOO Response-Old</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Response_Status__c</fullName>
        <label>Alternate Access IGLOO Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Response__c</fullName>
        <label>Alternate Access IGLOO Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Request_Time__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_ITPA_Request_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access ITPA Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_ITPA_Response_Status__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_ITPA_Response_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access ITPA Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_code__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_latitude__c</fullName>
        <description>Reporting</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_locator__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_locator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access locator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_longitude__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_meetPointHCoordinate__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_meetPointHCoordinate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access meetPointHCoordinate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_meetPointVCoordinate__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_meetPointVCoordinate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access meetPointVCoordinate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_npaNxx__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_npaNxx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access npaNxx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_servingWireCenter__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_servingWireCenter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access servingWireCenter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_status__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_territoryIndicator__c</fullName>
        <description>Reporting Fields</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_territoryIndicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access territoryIndicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_vendorName__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Alternate_Access_vendorName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternate Access vendorName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSI_Conversation_Id_Old__c</fullName>
        <label>CSI Conversation Id-Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Conversation_Id__c</fullName>
        <label>CSI Conversation Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>AT_T_Customer_Site__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Policy__c</fullName>
        <label>Connection Policy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Based_Statistical_Area_Code__c</fullName>
        <formula>AT_T_Customer_Site__r.Core_Based_Statistical_Area_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Based Statistical Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Panel__c</fullName>
        <label>Current Panel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Site Quotes</relationshipLabel>
        <relationshipName>AT_T_Customer_Site_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EligibleforEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to track when to send the email for MACD upgrade or downgrade</description>
        <label>Eligible for Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Location_ID__c</fullName>
        <formula>AT_T_Customer_Site__r.Global_Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Supplier_Name_Contains__c</fullName>
        <formula>IGLOO_Supplier_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGLOO Supplier Name Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGLOO_Supplier_Name__c</fullName>
        <label>IGLOO Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFlex_Plans_Qualified__c</fullName>
        <label>IPFlex Plans Qualified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan A</fullName>
                </value>
                <value>
                    <fullName>Plan B</fullName>
                </value>
                <value>
                    <fullName>Plan C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITPA_LEC_Contains__c</fullName>
        <formula>AT_T_Customer_Site__r.ITPA_LEC_Contains__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITPA LEC Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Igloo_Response_Received_Date_Old__c</fullName>
        <label>Igloo Response Received Date-Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Igloo_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Igloo Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iglow_Response_Received_Date__c</fullName>
        <label>Igloo Response Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsASE__c</fullName>
        <formula>AT_T_Quote__r.ProdCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEthernetAvailable__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.IsEtherNetAvaiable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is  Ethernet Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPage1visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPage1visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPage2_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page 2 Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPage3_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page 3 Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPage4_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN RDS Page 4 Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSoftRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSoftRemove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStaticRDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStaticRDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Soft_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Soft Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_AT_T_Customer_Site_Name__c</fullName>
        <description>Length Of  AT&amp;T Customer Site Name</description>
        <formula>LEN( AT_T_Customer_Site__r.Site_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of AT&amp;T Customer Site Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_VASA_LEC_Contains__c</fullName>
        <formula>AT_T_Customer_Site__r.Original_VASA_LEC_Contains__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original VASA LEC	Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <label>AVPN RDS Page Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_One_Completion__c</fullName>
        <label>Page One Completion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Three_Completion__c</fullName>
        <label>Page Three Completion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Two_Completion__c</fullName>
        <label>Page Two Completion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>AT_T_Customer_Site__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Site_Formula__c</fullName>
        <formula>AT_T_Customer_Site__r.Portal_Site_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Site Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Tier__c</fullName>
        <formula>AT_T_Customer_Site__r.Pricing_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>&quot;FEWP&quot;+Site_ID__c</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>AT&amp;T Customer Site Quotes</relationshipLabel>
        <relationshipName>AT_T_Customer_Site_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Tier__c</fullName>
        <formula>AT_T_Customer_Site__r.Qualification_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteStage__c</fullName>
        <description>Reporting Fields</description>
        <formula>TEXT( AT_T_Quote__r.Apttus_Proposal__Approval_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Configuration_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Configuration Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_JSON_Request__c</fullName>
        <label>RDS JSON Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RDS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RDS Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_VPN_Name__c</fullName>
        <label>RDS VPN Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecentASEMACD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RecentASEMACD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Reporting Field</description>
        <formula>AT_T_Customer_Site__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_ID_Auto_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Site ID Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <externalId>true</externalId>
        <label>Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>ATT Site Name</description>
        <formula>AT_T_Customer_Site__r.Site_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_RDS_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When data in all pages are completed</description>
        <label>AVPN RDS Site Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speeds_Not_Available_ITPA__c</fullName>
        <formula>AT_T_Customer_Site__r.Speeds_Not_Available_ITPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speeds Not Available (ITPA)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(AT_T_Customer_Site__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_City_State__c</fullName>
        <formula>AT_T_Customer_Site__r.Address_Line__c +&apos; ,&apos;+AT_T_Customer_Site__r.City__c+&apos; ,&apos; +TEXT(AT_T_Customer_Site__r.State__c) +&apos; &amp;&apos;+ AT_T_Customer_Site__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street,City, State &amp; ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Site_ID__c</fullName>
        <label>Unique Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASARegion__c</fullName>
        <label>VASA Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASAStatus__c</fullName>
        <description>Reporting</description>
        <formula>TEXT(AT_T_Customer_Site__r.VASA_Response_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VASA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_LEC__c</fullName>
        <formula>AT_T_Customer_Site__r.VASA_LEC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original VASA LEC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_Response_Status__c</fullName>
        <formula>TEXT(AT_T_Customer_Site__r.VASA_Response_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VASA Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Applied_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wireline Promotion Applied-Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wireline Promotion Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_After_Old__c</fullName>
        <label>Wireline Promotion Id After-Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_After__c</fullName>
        <label>Wireline Promotion Id After</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Applied_Old__c</fullName>
        <label>Wireline Promotion Id Applied-Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Applied__c</fullName>
        <label>Wireline Promotion Id Applied</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Before_Old__c</fullName>
        <label>Wireline Promotion Id Before-Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Before__c</fullName>
        <label>Wireline Promotion Id Before</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Sorted_Old__c</fullName>
        <label>Wireline Promotion Id Sorted-Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id_Sorted__c</fullName>
        <label>Wireline Promotion Id Sorted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Name_Applied_Old__c</fullName>
        <label>Wireline Promotion Name Applied Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Name_Applied__c</fullName>
        <label>Wireline Promotion Name Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Number_Applied_Old__c</fullName>
        <label>Wireline Promotion Number Applied Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Number_Applied__c</fullName>
        <label>Wireline Promotion Number Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>AT_T_Customer_Site__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPricingApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPricingApplied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>swcCLLI__c</fullName>
        <formula>AT_T_Customer_Site__r.swcCLLI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>swcCLLI</label>
        <type>Text</type>
    </fields>
    <label>AT&amp;T Customer Site Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AT_T_Quote__c</columns>
        <columns>AT_T_Customer_Site__c</columns>
        <columns>NAME</columns>
        <columns>Site_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/21/2015 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AT&amp;T Customer Site Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT&amp;T Customer Site Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>